made top nav bar, colors and font to be edited

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Daniel Ortiz' Portfoilo</title>
 </head>
-
+<body>
 <header>
     <h1>Daniel Ortiz</h1>
-    <header class="nav links">
         <nav>
             <ul>
                 <li>
@@ -34,26 +33,25 @@
                 </li>
             </ul>
         </nav>
-    </header>
 </header>
 
-<body>
-    <main>
-        <main img="" src="" alt="place img here">
-            <h3>Cool subtitle here!</h3>
-        </main>
+
+    <section>
+        <section img="" src="" alt="place img here">
+            <h2>Cool subtitle here!</h2>
+        </section>
         <aside>
-            <h3>About Me</h3>
+            <h2>About Me</h2>
             <hr id="about_me_hr">
-            <H3>Work</H3>
-            <hr id="about_me_hr">
-            <h3>Contact Me</h3>
-            <hr id="about_me_hr">
+            <h2>Work</h2>
+            <hr id="work_hr">
+            <h2>Contact Me</h2>
+            <hr id="contact_me_hr">
         </aside>
         <section>
             <section id="about_me" class="section_1">
 
-                <div id="about-header"><h2>About Me</h2></div>
+                <div id="about-ya-boiii"><h2>About Me</h2></div>
 
                 <div>
 
@@ -91,6 +89,7 @@
                 <p>LinkedIn</p>
             </section>
         </section>
+    </main>
 </body>
-
+<footer>Copyright Daniel Ortiz 2021</footer>
 </html>
