formated aside box

--- a/index.html
+++ b/index.html
@@ -36,22 +36,26 @@
 </header>
 
 
-    <section>
-        <section img="" src="" alt="place img here">
+    <main>
+        <a img="" src="" alt="place img here">
+            
             <h2>Cool subtitle here!</h2>
-        </section>
+            
+    </main>
+    <aside class="titles">
         <aside>
-            <h2>About Me</h2>
+            <h2 id="about_me_text">About Me</h2>
             <hr id="about_me_hr">
-            <h2>Work</h2>
+            <h2 id="work_text">Work</h2>
             <hr id="work_hr">
-            <h2>Contact Me</h2>
+            <h2 id="contact_me_text">Contact Me</h2>
             <hr id="contact_me_hr">
         </aside>
-        <section>
+    </aside>
+    <section>
             <section id="about_me" class="section_1">
 
-                <div id="about-ya-boiii"><h2>About Me</h2></div>
+                <div id="about-ya-boiii"><h2></h2></div>
 
                 <div>
 
@@ -88,8 +92,7 @@
                 <p>GitHub</p>
                 <p>LinkedIn</p>
             </section>
-        </section>
-    </main>
+    </section>
 </body>
 <footer>Copyright Daniel Ortiz 2021</footer>
 </html>
