created contact me href's

--- a/index.html
+++ b/index.html
@@ -86,11 +86,16 @@
                     <img="" src="" alt=""/>
                 </section>
             </section>
-            <section id="contact_me" class="section_3">
-                <p>813-263-5013</p>
-                <p>ortiz.daniel1994@gmail.com</p>
-                <p>GitHub</p>
-                <p>LinkedIn</p>
+            <section id="contact_me">
+                <nav>
+                    <ul>
+                       <a href=""> <li>E-Mail</li></a>
+                        <a href="https://github.com/CoderOrtiz"><li>GitHub</li></a>
+                        <a href="https://www.linkedin.com/in/daniel-ortiz-50a436223/"><li>LinkedIn</li></a>
+                    </ul>
+                </nav>                
+                
+                
             </section>
     </section>
 </body>
