added image in main with styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
     <main>
-        <a img="" src="" alt="place img here">
+        <img src="./assets/images/profile_picture2.png" alt="picture of daniel ortiz"></a>
             
             <h2>Cool subtitle here!</h2>
             
