Removed and added classes to the aside tag and edited same on css

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <aside>
             <h2 id="about_me_text">About Me</h2>
             <hr id="about_me_hr">
-            <h2 id="work_text">Work</h2>
-            <hr id="work_hr">
-            <h2 id="contact_me_text">Contact Me</h2>
-            <hr id="contact_me_hr">
+            <h2 class="work_and_contact_me_text">Work</h2>
+            <hr class="work_and_contact_me_hr">
+            <h2 class="work_and_contact_me_text">Contact Me</h2>
+            <hr class="work_and_contact_me_hr">
         </aside>
     </aside>
     <section>
