linked  contact me buttons and added css to the buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <h1>Daniel Ortiz</h1>
         <nav>
             <ul>
-                <li><a href="#about_me">About Me</a>
-                <li>
+                <li><a href="#about_me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact_me">Contact Me</a></li>
                 <li><a href=""> Resume</a></li>
@@ -65,24 +64,15 @@
                 <img="" src="" alt="" />
             </section>
         </section>
-        <section id="contact_me">
+        <section>
             <nav>
                 <ul>
-                    <a href="">
-                        <li>E-Mail</li>
-                    </a>
-                    <a href="https://github.com/CoderOrtiz">
-                        <li>GitHub</li>
-                    </a>
-                    <a href="https://www.linkedin.com/in/daniel-ortiz-50a436223/">
-                        <li>LinkedIn</li>
-                    </a>
+                    <li><a class="buttons" href="mailto:ortiz.daniel1994@gmail.com?subject=Lets Team Up!">E-Mail</a></li>
+                    <li><a class="buttons" href="https://github.com/CoderOrtiz">GitHub</a></li>
+                    <li><a class="buttons" href="https://www.linkedin.com/in/daniel-ortiz-50a436223/">LinkedIn</a></li>
                 </ul>
             </nav>
-
-
         </section>
-    </section>
 </body>
 <footer>Copyright Daniel Ortiz 2021</footer>
 
