aligned all elements within page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <main>
-        <img src="./assets/images/profile_picture2.png" alt="picture of daniel ortiz"></a>
+        <p><img src="./assets/images/profile_picture2.png" alt="picture of daniel ortiz"></a></p>
 
         <h2>Cool subtitle here!</h2>
 
@@ -33,21 +33,14 @@
         <aside>
             <h2 id="about_me_text">About Me</h2>
             <hr id="about_me_hr">
-            <h2 class="work_and_contact_me_text">Work</h2>
-            <hr class="work_and_contact_me_hr">
-            <h2 class="work_and_contact_me_text">Contact Me</h2>
-            <hr class="work_and_contact_me_hr">
+            <h2 id="work_text">Work</h2>
+            <hr id="work_hr">
+            <h2 id="contact_me_text">Contact Me</h2>
+            <hr id="contact_me_hr">
         </aside>
     </aside>
     <section>
         <section id="about_me" class="section_1">
-
-            <div id="about-ya-boiii">
-                <h2></h2>
-            </div>
-
-            <div>
-
                 <p>I grew up in Florida and my life’s dream was to do Naval Special Warfare. My fiancé came in like a
                     wrecking ball and I decided to change course while in college. Long story short, I joined law
                     enforcement and had committed two and a half years of my life to the profession. For a long list of
@@ -56,24 +49,37 @@
                     enrolled at UCF's Coding Boot Camp and am doubling down on my schooling by participating in the
                     Udemy Online Coding Boot Camp. Let's connect! Thanks for stopping by and talk to you soon! 🙂
                 </p>
-            </div>
-
         </section>
-        <section id="work" class="section_2">
-            <section>
-                <img="" src="" alt="" />
-            </section>
+        <section>
+            
+                    <a href="https://coderortiz.github.io/code-refactor/"> <img id="refactor" src="./assets/images/refactor.png" height="200px" width="615px"/></a></a>
+                
+            <table>
+                <tr>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
+                </tr>
+                <tr>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
+
+                </tr>
+            </table>
         </section>
         <section>
             <nav>
-                <ul>
-                    <li><a class="buttons" href="mailto:ortiz.daniel1994@gmail.com?subject=Lets Team Up!">E-Mail</a></li>
-                    <li><a class="buttons" href="https://github.com/CoderOrtiz">GitHub</a></li>
-                    <li><a class="buttons" href="https://www.linkedin.com/in/daniel-ortiz-50a436223/">LinkedIn</a></li>
-                </ul>
+                <div class="button">
+                    <ul>
+                        <li><a class="buttons" href="mailto:ortiz.daniel1994@gmail.com?subject=Lets Team Up!">E-Mail</a>
+                        </li>
+                        <li><a class="buttons" href="https://github.com/CoderOrtiz">GitHub</a></li>
+                        <li><a class="buttons" href="https://www.linkedin.com/in/daniel-ortiz-50a436223/">LinkedIn</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </section>
 </body>
-<footer>Copyright Daniel Ortiz 2021</footer>
+<footer> &copy; Daniel Ortiz 2021</footer>
 
 </html>
