completed website for assignment

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#about_me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact_me">Contact Me</a></li>
-                <li><a href=""> Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/1KAt-RR-trk6jr5gfss13TaaY7NyGu5b7/edit?usp=sharing&ouid=100683923693026073754&rtpof=true&sd=true"> Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -41,32 +41,37 @@
     </aside>
     <section>
         <section id="about_me" class="section_1">
-                <p>I grew up in Florida and my life’s dream was to do Naval Special Warfare. My fiancé came in like a
-                    wrecking ball and I decided to change course while in college. Long story short, I joined law
-                    enforcement and had committed two and a half years of my life to the profession. For a long list of
-                    personal and professional reasons, I once again began to look for a new career. For my current
-                    lifestyle, I discovered software engineering and believe it is the perfect fit for my life. I am now
-                    enrolled at UCF's Coding Boot Camp and am doubling down on my schooling by participating in the
-                    Udemy Online Coding Boot Camp. Let's connect! Thanks for stopping by and talk to you soon! 🙂
-                </p>
+            <p>I grew up in Florida and my life’s dream was to do Naval Special Warfare. My fiancé came in like a
+                wrecking ball and I decided to change course while in college. Long story short, I joined law
+                enforcement and had committed two and a half years of my life to the profession. For a long list of
+                personal and professional reasons, I once again began to look for a new career. For my current
+                lifestyle, I discovered software engineering and believe it is the perfect fit for my life. I am now
+                enrolled at UCF's Coding Boot Camp and am doubling down on my schooling by participating in the
+                Udemy Online Coding Boot Camp. Let's connect! Thanks for stopping by and talk to you soon! 🙂
+            </p>
         </section>
-        <section>
-            
-                    <a href="https://coderortiz.github.io/code-refactor/"> <img id="refactor" src="./assets/images/refactor.png" height="200px" width="615px"/></a></a>
-                
+        <section  id="work">
+
+            <a href="https://coderortiz.github.io/code-refactor/"> <img id="refactor" src="./assets/images/refactor.png"
+                    height="200px" width="615px" /></a></a>
+
             <table>
                 <tr>
-                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
-                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img
+                                src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img
+                                src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
                 </tr>
                 <tr>
-                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
-                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img src="./assets/images/coming_soon.png" height="150px" width="300px"/></td></a>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img
+                                src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
+                    <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img
+                                src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
 
                 </tr>
             </table>
         </section>
-        <section>
+        <section id="contact_me">
             <nav>
                 <div class="button">
                     <ul>
