cleaned html/css and added notes

--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Daniel Ortiz' Portfoilo</title>
+    <title>Daniel Ortiz' Portfoilo 👨🏽‍💻</title>
+    <link rel="icon" type="image/x-icon" href=".//Assets/images/favicon.ico">
 </head>
 
 <body>
     <header>
+        <!-- nav bar -->
         <h1>Daniel Ortiz</h1>
         <nav>
             <ul>
                 <li><a href="#about_me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact_me">Contact Me</a></li>
-                <li><a href="https://docs.google.com/document/d/1KAt-RR-trk6jr5gfss13TaaY7NyGu5b7/edit?usp=sharing&ouid=100683923693026073754&rtpof=true&sd=true"> Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/173jo_hexavExepwHeUwfJk4gQgXXqTWt/view?usp=sharing">Resume</a></li>
             </ul>
         </nav>
     </header>
 
-
     <main>
-        <p><img src="./assets/images/profile_picture2.png" alt="picture of daniel ortiz"></a></p>
-
-        <h2>Cool subtitle here!</h2>
-
+        <!-- profile picture with subcaption -->
+        <p><img src="./assets/images/profile_picture2.png" alt="profile picture of daniel ortiz"></a></p>
+        <h2>Welcome To My Portfoilo!</h2>
     </main>
-    <aside class="titles">
+
+        <!-- left aside section -->
         <aside>
             <h2 id="about_me_text">About Me</h2>
             <hr id="about_me_hr">
@@ -38,10 +39,12 @@
             <h2 id="contact_me_text">Contact Me</h2>
             <hr id="contact_me_hr">
         </aside>
-    </aside>
+    
     <section>
+        <!-- about me paragraph -->
         <section id="about_me" class="section_1">
-            <p>I grew up in Florida and my life’s dream was to do Naval Special Warfare. My fiancé came in like a
+            <p>
+                I grew up in Florida and my life’s dream was to do Naval Special Warfare. My fiancé came in like a
                 wrecking ball and I decided to change course while in college. Long story short, I joined law
                 enforcement and had committed two and a half years of my life to the profession. For a long list of
                 personal and professional reasons, I once again began to look for a new career. For my current
@@ -50,12 +53,13 @@
                 Udemy Online Coding Boot Camp. Let's connect! Thanks for stopping by and talk to you soon! 🙂
             </p>
         </section>
-        <section  id="work">
-
+        <section id="work">
+            <!-- large img with link from our first homework assignment -->
             <a href="https://coderortiz.github.io/code-refactor/"> <img id="refactor" src="./assets/images/refactor.png"
                     height="200px" width="615px" /></a></a>
 
             <table>
+                <!-- four coming soon imgs with link to my first webpage -->
                 <tr>
                     <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img
                                 src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
@@ -71,7 +75,9 @@
                 </tr>
             </table>
         </section>
+
         <section id="contact_me">
+            <!-- contact me links -->
             <nav>
                 <div class="button">
                     <ul>
@@ -85,6 +91,7 @@
             </nav>
         </section>
 </body>
+<!-- copy right symbol in footer -->
 <footer> &copy; Daniel Ortiz 2021</footer>
 
 </html>
