--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Daniel Ortiz' Portfoilo 👨🏽‍💻</title>
-    <link rel="icon" type="image/x-icon" href=".//Assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./Assets/images/favicon.ico">
 </head>
 
 <body>
@@ -19,7 +19,8 @@
                 <li><a href="#about_me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact_me">Contact Me</a></li>
-                <li><a href="https://drive.google.com/file/d/173jo_hexavExepwHeUwfJk4gQgXXqTWt/view?usp=sharing">Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/173jo_hexavExepwHeUwfJk4gQgXXqTWt/view?usp=sharing">Resume</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -30,16 +31,16 @@
         <h2>Welcome To My Portfoilo!</h2>
     </main>
 
-        <!-- left aside section -->
-        <aside>
-            <h2 id="about_me_text">About Me</h2>
-            <hr id="about_me_hr">
-            <h2 id="work_text">Work</h2>
-            <hr id="work_hr">
-            <h2 id="contact_me_text">Contact Me</h2>
-            <hr id="contact_me_hr">
-        </aside>
-    
+    <!-- left aside section -->
+    <aside>
+        <h2 id="about_me_text">About Me</h2>
+        <hr id="about_me_hr">
+        <h2 id="work_text">Work</h2>
+        <hr id="work_hr">
+        <h2 id="contact_me_text">Contact Me</h2>
+        <hr id="contact_me_hr">
+    </aside>
+
     <section>
         <!-- about me paragraph -->
         <section id="about_me" class="section_1">
@@ -53,11 +54,11 @@
                 Udemy Online Coding Boot Camp. Let's connect! Thanks for stopping by and talk to you soon! 🙂
             </p>
         </section>
+
         <section id="work">
             <!-- large img with link from our first homework assignment -->
             <a href="https://coderortiz.github.io/code-refactor/"> <img id="refactor" src="./assets/images/refactor.png"
-                    height="200px" width="615px" /></a></a>
-
+                    height="200px" width="615px" /></a>
             <table>
                 <!-- four coming soon imgs with link to my first webpage -->
                 <tr>
@@ -71,7 +72,6 @@
                                 src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
                     <td><a href="https://coderortiz.github.io/DJs_Personal_Page/"><img
                                 src="./assets/images/coming_soon.png" height="150px" width="300px" /></td></a>
-
                 </tr>
             </table>
         </section>
@@ -81,8 +81,7 @@
             <nav>
                 <div class="button">
                     <ul>
-                        <li><a class="buttons" href="mailto:ortiz.daniel1994@gmail.com?subject=Lets Team Up!">E-Mail</a>
-                        </li>
+                        <li><a class="buttons" href="mailto:ortiz.daniel1994@gmail.com?subject=Lets Team Up!">E-Mail</a></li>
                         <li><a class="buttons" href="https://github.com/CoderOrtiz">GitHub</a></li>
                         <li><a class="buttons" href="https://www.linkedin.com/in/daniel-ortiz-50a436223/">LinkedIn</a>
                         </li>
